--- a/css/presets/preset1.css
+++ b/css/presets/preset1.css
@@ -6,7 +6,7 @@ a,
 .single-table.featured .btn.btn-primary, 
 .contact-info ul li a:hover, 
 #footer .footer-bottom a  {
-  color: #028fcc;
+  color: rgb(51, 103, 214); 
 }
 
 .btn.btn-primary:hover,
@@ -34,21 +34,21 @@ a:hover, a:focus {
 .left-control:hover, 
 .right-control:hover, 
 .folio-overview a:hover {
-  background-color:#028fcc;
+  background-color: rgb(51, 103, 214);
 }
 
 .twitter-left-control:hover, 
 .twitter-right-control:hover, 
 .btn-loadmore:hover  {
-	border: 1px solid #028fcc;
+	border: 1px solid rgb(51, 103, 214);
 }
 
 .caption .btn-start:hover, 
 .left-control:hover, 
 .right-control:hover {
-	border-color: #028fcc;
+	border-color: rgb(51, 103, 214);
 }
 
 .twitter-icon .fa-twitter:after {
-	border-color: #028fcc transparent transparent;
+	border-color: rgb(51, 103, 214) transparent transparent;
 }
