--- a/css/main.css
+++ b/css/main.css
@@ -121,12 +121,15 @@ section {
 /*************************
 ********Home CSS**********
 **************************/
+body #vegas {
+  height: 100vh;  
+}
 #home-slider {
   overflow: hidden;
   position: relative;
 }
 
-#home-slider .caption {
+#vegas .caption {
   position: absolute;
   top: 50%;
   margin-top: -104px;
@@ -140,7 +143,7 @@ section {
   color: #fff;
 }
 
-#home-slider .caption h1 {
+#vegas .caption h1 {
   color: #fff;
   font-size: 60px;
   font-weight: 700;
@@ -161,83 +164,7 @@ section {
   color: #fff
 }
 
-.carousel-fade .carousel-inner .item {
-  opacity: 0;
-  -webkit-transition-property: opacity;
-  transition-property: opacity;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 2037px;
-}
-
-.carousel-fade .carousel-inner .item:after {
-  content: " ";
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: rgba(0,0,0,.7);
-}
-
-.carousel-fade .carousel-inner .active {
-  opacity: 1;
-}
-.carousel-fade .carousel-inner .active.left,
-.carousel-fade .carousel-inner .active.right {
-  left: 0;
-  opacity: 0;
-  z-index: 1;
-}
-.carousel-fade .carousel-inner .next.left,
-.carousel-fade .carousel-inner .prev.right {
-  opacity: 1;
-}
-.carousel-fade .carousel-control {
-  z-index: 2;
-}
-
-.left-control, .right-control {
-  position: absolute;
-  top: 50%;
-  height: 51px;
-  width: 51px;
-  line-height: 48px;
-  border-radius: 50%;
-  border:1px solid #fff;  
-  z-index: 20;
-  font-size: 24px;
-  color: #fff;
-  text-align: center;
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -ms-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-}
-
-.left-control {
-  left: -51px
-} 
-
-.right-control {
-  right: -51px;
-}
-
-.left-control:hover, 
-.right-control:hover {
-  color: #fff;
-}
-
-#home-slider:hover .left-control {
-  left:30px
-} 
-
-#home-slider:hover .right-control {
-  right:30px
-}
-
-#home-slider .fa-angle-down {
+#vegas .fa-angle-down {
   position: absolute;
   left: 50%;
   bottom: 50px;
