Check pls, i like perfection (pls)

--- a/css/main.css
+++ b/css/main.css
@@ -502,6 +502,10 @@ body #vegas {
   color: #999;
 }
 
+.member-info {
+  height: 100px;
+}
+
 
 /*************************
 *******Features CSS*******
