--- a/css/responsive.css
+++ b/css/responsive.css
@@ -97,6 +97,7 @@
 	.our-services .col-sm-4 {
 		margin-bottom: 32px;
 		padding-bottom: 20px;
+		border-bottom: 1px solid #f2f2f2 !important;
 	}
 	.our-services .col-sm-4:nth-child(4), 
 	.our-services .col-sm-4:nth-child(5), 
