--- a/css/main.css
+++ b/css/main.css
@@ -101,20 +101,64 @@ section {
   right: 0;
   bottom: 0;
   z-index: 999999;
-  background: #fff;
+  background: #2c3e52
 }
 
-.preloader > i {
+.circle-wrapper {
+  height: 10px;
+  width: 60px;
   position: absolute;
-  font-size: 36px;
-  line-height: 36px;
   top: 50%;
+  margin-top: -5px;
   left: 50%;
-  height: 36px;
-  width: 36px;
-  margin-top: -15px;
-  margin-left: -15px;
+  margin-left: -30px;
+  
+}
+
+.circle-wrapper > div {
+  background-color: #72c2a1;
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
   display: inline-block;
+  
+  -webkit-animation: stretchdelay 0.7s infinite ease-in-out;
+  animation: stretchdelay 0.7s infinite ease-in-out;
+}
+
+.preloader .circ2 {
+  -webkit-animation-delay: -0.6s;
+  animation-delay: -0.6s;
+}
+
+.preloader .circ3 {
+  -webkit-animation-delay: -0.5s;
+  animation-delay: -0.5s;
+}
+
+.preloader .circ4 {
+  -webkit-animation-delay: -0.4s;
+  animation-delay: -0.4s;
+}
+
+.preloader .circ5 {
+  -webkit-animation-delay: -0.3s;
+  animation-delay: -0.3s;
+}
+
+@-webkit-keyframes stretchdelay {
+  0%, 40%, 100% { -webkit-transform: translateY(-10px) }  
+  20% { -webkit-transform: translateY(-20px) }
+}
+
+@keyframes stretchdelay {
+  0%, 40%, 100% { 
+    transform: translateY(-10px);
+    -webkit-transform: translateY(-10px);
+  } 20% {
+    transform: translateY(-20px);
+    -webkit-transform: translateY(-20px);
+  }
 }
 
 
